major refactoring of layout add upload feature.
